fixed some layout bugs with new buttons (p-element)

--- a/css/main.css
+++ b/css/main.css
@@ -103,10 +103,14 @@ h3 {
     margin-top: 25%;
 }
 
+#cv-btn {
+    width: 100px;
+}
+
 .button {
     background-color: var(--detail--color--light);
     color: var(--bg--color--light);
-    width: 40%;
+    width: 50%;
     border: none;
     padding: 0.2rem 0.5rem;
     text-align: start;
@@ -319,7 +323,7 @@ li {
     }
 
     .project-card .button {
-        width: 50%;
+        width: 60%;
     }
 
     /* main end */
